# tree-sitter-cool

./: Cargo.toml  LICENSE  README.md  grammar.js  package.json
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  definitions.txt  expressions.txt  literals.txt  types.txt
