[package]
name = "tree-sitter-cool"
description = "COOL grammar for the tree-sitter parsing library"
version = "0.0.1"
authors = ["Alexandru Gherghescu <alexghergh@gmail.com>"]
keywords = ["incremental", "parsing", "cool"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/alexghergh/tree-sitter-cool"
edition = "2022"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
